--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <head><script type="text/javascript" id="mobile-simulator">
     window.hasMobileFirstExtension = true;</script>
+<script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool'></script> 
 <!--==========================
 META TAGS 
 ===========================-->
